# scracc

./: .gitignore  CMakeLists.txt  README.md
libscracc/: CMakeLists.txt  libscracc.cpp  libscracc.h
scracc/: CMakeLists.txt  scracc.cpp
test/: test01.scc
